--- a/client/src/stylesheets/deleteForm.css
+++ b/client/src/stylesheets/deleteForm.css
@@ -1,6 +1,7 @@
 .delete{
     width: 195px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 7px;
     height: 45px;
     border-radius: 6px;
     border-color: rgb(0, 69, 87);
@@ -22,5 +23,5 @@
     width: 100px;
     margin-left: 430px;
     position: absolute;
-    bottom: 37px;;
+    bottom: -65px;;
 }
